Refactor code for serialization and clean up
- Marked non-serializable or sensitive fields as transient:
  - Added transient keyword to `Admin` field in `Fine` class to avoid serialization issues and protect sensitive data.
- Improved code readability and maintainability:
  - Reformatted and organized code for better clarity.
  - Removed unused or redundant code.
- Updated documentation and comments to reflect changes.